# Mori

./: .gitignore  INSTALL.md  README.md  docker-compose.yml  mcp-gateway.json.example  mori  mori.env.example  mori.yaml.example
caddy/: Caddyfile
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIG-REFERENCE.md
docs/adr/: 0001-orchestrator-architecture.md  0002-mori-niwa-separation.md
mori-app/: Dockerfile  requirements.txt
mori-app/backend/: db.py  main.py
mori-app/backend/models/: agent_run.py  note.py  project.py  task.py
mori-app/backend/routers/: agents.py  chat.py  memory.py  models.py  notes.py  pipelines.py  projects.py  scheduled_tasks.py  stream.py  system.py  tasks.py
mori-app/backend/services/: auth.py  notifier.py
mori-app/db/: schema.sql
mori-app/db/migrations/: 001_initial.sql  002_embeddings_scheduler.sql  003_chat.sql
mori-app/frontend/: index.html  package-lock.json  package.json  vite.config.js
mori-app/frontend/src/: App.svelte
mori-app/frontend/src/lib/: api.js  (+1 more)
mori-orchestrator/: Dockerfile  pyproject.toml
mori-orchestrator/src/: agent_registry.py  api.py  config.py  db.py  executor.py  main.py  memory.py  metrics.py  model_registry.py  orchestrator.py  pipeline_engine.py  router.py  scheduler.py  stream.py  tool_manager.py
mori-orchestrator/tests/: test_claude_cli_executor.py  test_config.py  test_memory.py  test_router.py  test_scheduler.py  test_tools.py
searxng/: settings.yml
servers/notes-mcp/: Dockerfile  server.py
servers/platform-mcp/: Dockerfile  server.py
servers/tasks-mcp/: requirements.txt  server.py
(+21 files in other folders)
